# OWTP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  WaterThermodynamicProperties.sln  appveyor.yml  build.sh  cibuild.sh  citest.sh
WaterThermodynamicProperties.Core/: Export.c  Region2.h  WaterThermodynamicProperties.Core.vcxproj
WaterThermodynamicProperties.UnitTests/: AccuracyTests.cpp  WaterThermodynamicProperties.UnitTests.vcxproj
ci/: .gitignore  after_test.ps1  before_build.sh  before_build_debug.sh  before_build_release.sh  build.sh  test.sh  test_script.ps1  test_script.sh
documentation/references/IteratorVariableData/: ConvertToCode_3vars.xlsm  ConvertToCode_4vars.xlsm
documentation/references/IteratorVariableData/Region1/: iapws-if97-region1_backward_tps.csv
documentation/references/IteratorVariableData/Region2/: iapws-if97-region2-0.csv  iapws-if97-region2_backward_phs_2a.csv  iapws-if97-region2_backward_phs_2b.csv  iapws-if97-region2_backward_phs_2c.csv  iapws-if97-region2_backward_tph_2a.csv  iapws-if97-region2_backward_tps_2b.csv  iapws-if97-region2_backward_tps_2c.csv
src/: All.h  CMakeLists.txt  Export.c  OWTP.h
src/Regions/: ReferenceConstants.h  Region1.h  Region2.h  Region3.h  Region4.h  Region5.h
src/Regions/Boundaries/RegionBoundaries/: MetastableRegion.h  R2andR3.h  R3andR4.h
src/Regions/Boundaries/SubregionBoundaries/Region3/: Boundaries_PT.h  Boundaries_Ps.h  Boundaries_vPh.h  Boundaries_vPs.h  Boundaries_vTP.h
src/WaterThermodynamicProperties.Core/: Export.c  ReferenceConstants.h  Region1.h  Region3.h  RegionBoundaries.h  WaterThermodynamicProperties.Core.vcxproj  WaterThermodynamicProperties.Core.vcxproj.filters
src/WaterThermodynamicProperties.Core/Regions/: ReferenceConstants.h  Region3.h  RegionBoundaries.h
src/WaterThermodynamicProperties.Core/Regions/Boundaries/RegionBoundaries/: R2andR3.h
src/WaterThermodynamicProperties.Core/Regions/Boundaries/SubregionBoundaries/Region3/: Boundaries_vTP.h
src/documentation/references/IteratorVariableData/: ConvertToCode_3vars.xlsm  ConvertToCode_4vars.xlsm
src/documentation/references/IteratorVariableData/Region1/: iapws-if97-region1.csv  iapws-if97-region1_backward_phs.csv  iapws-if97-region1_backward_tph.csv
src/documentation/references/IteratorVariableData/Region2/: iapws-if97-region2-r.csv  iapws-if97-region2_backward_tph_2b.csv  iapws-if97-region2_backward_tph_2c.csv  iapws-if97-region2_backward_tps_2a.csv
src/documentation/references/IteratorVariableData/Region3/: IAPWS-IF97-Region3-VPT.xlsx  iapws-if97-region3_backward_tph_3a.csv  iapws-if97-region3_backward_tps_3a.csv
test/: CMakeLists.txt
test/AccuracyTests/: AccTestBase.h  AccTestsBoundaries.cpp  AccTestsRegion1.cpp  AccTestsRegion2.cpp  AccTestsRegion3.cpp  AccTestsRegion3SubBoundaries.cpp  AccTestsRegion4.cpp  AccTestsRegion5.cpp  AccTestsRegionBoundaries.cpp  OWTPAccTests_Props_PT.cpp  OWTPAccTests_Props_Ph.cpp  OWTPAccTests_Props_Ps.cpp  OWTPAccTests_Props_hs.cpp  OWTPAccTests_hPT.cpp  OWTPAccTests_sPT.cpp  OWTPAccTests_uPT.cpp  OWTPAccTests_vPT.cpp
tests/AccuracyTests/: AccuracyTestBase.cs  AccuracyTests.csproj  Imports.cs  Region1AccTests.cs
tests/AccuracyTests/Properties/: AssemblyInfo.cs
tests/WaterThermodynamicProperties.Tests/: Imports.cs  WaterThermodynamicProperties.Tests.csproj
tests/WaterThermodynamicProperties.Tests/AccuracyTests/: AccuracyTestBase.cs  BoundaryAccTests.cs  Region1AccTests.cs  Region2AccTests.cs  Region3AccTests.cs
tests/WaterThermodynamicProperties.Tests/Properties/: AssemblyInfo.cs
tests/WaterThermodynamicProperties.UnitTests/: WaterThermodynamicProperties.UnitTests.vcxproj
(+12 files in other folders)
